--- a/spring-boot-frontend/src/main/resources/templates/index.html
+++ b/spring-boot-frontend/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
     <div id="banner" class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">🥳 Congratulations!</h1>
-            <p class="col-md-8 fs-4">Your Spring Boot app now runs on
+            <p class="col-md-8 fs-4">Your <strong>Spring Boot</strong> app now runs on
                 VMware Tanzu&nbsp;Application&nbsp;Platform.</p>
         </div>
     </div>
