--- a/spring-boot-frontend/src/main/resources/templates/index.html
+++ b/spring-boot-frontend/src/main/resources/templates/index.html
@@ -74,5 +74,8 @@
     </div>
 </div>
 
+<script src="/webjars/jquery/jquery.slim.js"></script>
+<script src="/webjars/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
