Add Bootstrap dependencies (Javascript bundle, including jQuery)

--- a/nodejs-express/views/index.mustache
+++ b/nodejs-express/views/index.mustache
@@ -63,5 +63,8 @@
     </div>
 </div>
 
+<script src="/js/jquery.slim.min.js"></script>
+<script src="/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
