--- a/java-spring-boot/src/main/resources/templates/index.html
+++ b/java-spring-boot/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" data-bs-theme="light">
 <head>
-  <title th:if="${runningInKubernetes}">Spring Boot on TAP</title>
-  <title th:unless="${runningInKubernetes}">Spring Boot</title>
+  <title th:if="${app.runningInKubernetes}">Spring Boot on TAP</title>
+  <title th:unless="${app.runningInKubernetes}">Spring Boot</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.css}"/>
@@ -15,7 +15,7 @@
     <a class="navbar-brand" th:href="@{/}">
       <img th:src="@{/images/spring-boot.png}" alt="Spring Boot" width="30" height="27"
            class="d-inline-block align-text-top"> Spring Boot</a>
-    <span class="navbar-text p-0" th:if="${runningInKubernetes}">
+    <span class="navbar-text p-0" th:if="${app.runningInKubernetes}">
             <span class="small">Powered by</span>
             <a href="https://tanzu.vmware.com/application-platform">
                 <img th:src="@{/images/tap.png}" width="145" height="38"
@@ -30,8 +30,8 @@
       <div class="container-fluid">
         <h1 class="display-5 fw-bold">🥳 Congratulations!</h1>
         <p class="col-12 fs-4">
-          <span th:if="${runningInKubernetes}">Your <strong>Spring Boot</strong> app now runs on VMware Tanzu Application Platform.</span>
-          <span th:unless="${runningInKubernetes}">Your <strong>Spring Boot</strong> app is up and running.</span>
+          <span th:if="${app.runningInKubernetes}">Your <strong>Spring Boot</strong> app now runs on VMware Tanzu Application Platform.</span>
+          <span th:unless="${app.runningInKubernetes}">Your <strong>Spring Boot</strong> app is up and running.</span>
         </p>
       </div>
     </div>
@@ -69,18 +69,20 @@
     <div class="col-lg-6 mt-lg-3 mb-3">
       <div class="h-100 p-4 bg-light border rounded-3">
         <h2>⏭️ What's next?</h2>
-        <div th:if="${runningInKubernetes}">
+        <div th:if="${app.runningInKubernetes}">
           <p>Follow these guides to learn how TAP can simplify your Kubernetes developer experience.</p>
-          <a href="https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.7/tap/getting-started.html"
-             class="btn btn-outline-secondary" target="_" role="button">Getting started</a>
-          <a
-            href="https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.7/tap/getting-started-about-consuming-services.html"
-            class="btn btn-outline-secondary" target="_" role="button">Consume services</a>
+          <a class="btn btn-outline-secondary" target="_" role="button"
+             href="https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.7/tap/getting-started.html">
+            Getting started</a>
+          <a class="btn btn-outline-secondary" target="_" role="button"
+             href="https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.7/tap/getting-started-about-consuming-services.html">
+            Consume services</a>
         </div>
-        <div th:unless="${runningInKubernetes}">
+        <div th:unless="${app.runningInKubernetes}">
           <p>Use VMware Tanzu Application Platform to deploy this app to Kubernetes.</p>
-          <a href="https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.7/tap/getting-started-deploy-first-app.html"
-             class="btn btn-outline-secondary" target="_" role="button">Deploy your first app</a>
+          <a class="btn btn-outline-secondary" target="_" role="button"
+             href="https://docs.vmware.com/en/VMware-Tanzu-Application-Platform/1.7/tap/getting-started-deploy-first-app.html">
+            Deploy your first app</a>
         </div>
       </div>
     </div>
