--- a/java-spring-boot/src/main/resources/templates/index.html
+++ b/java-spring-boot/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
           <li><span class="text-white-50">IP Address:</span>
             <span class="text-warning font-monospace" th:text="${app.ipAddress}">springProfiles</span>
           </li>
-          <li><span class="text-white-50">Data Source:</span>
+          <li><span class="text-white-50">Database:</span>
             <span class="text-warning font-monospace">
               <span th:text="${app.dataSource}" th:if="${app.dataSource}">dataSource</span>
               <span th:unless="${app.dataSource}">none</span>
